samples/_failures_safe/1761472613_47b5c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fd5fdcd.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_3fd5fdcd.c:145:5: error: expected declaration or statement at end of input
  145 |     printf("  WARNING: %d\n", severity_count[2]);
      |     ^~~~~~
